# seattlehaskell-org

./: .gitignore  Foundation.hs  LICENSE  README.md  Scratch.hs  Settings.hs  cabal.sandbox.config  devel.template  genconf.template  index.php  seattlehaskell-org.cabal  seattlehaskell.cabal  site.hs  stack.yaml
Handler/: Home.hs
Util/: Formatting.hs  Meetup.hs  MeetupApi.hs  Slack.hs
app/: devel.hs
config/: apache2.conf  apache2.conf.template  keter.yml  routes  settings.yml  sqlite.yml  test-settings.yml
lib/: Foundation.hs
lib/Handler/: Common.hs  Home.hs
script/: build  deploy  devel  genconf  init  keter  make  server
static/other/: pcph.ics
templates/: about.hamlet  contact.hamlet  default-layout-wrapper.hamlet  default-layout.lucius  home.hamlet  homepage.hamlet  homepage.lucius  pcph.hamlet  slack.hamlet
test/Handler/: HomeSpec.hs
test/TestUtil/: Event.hs  TestServer.hs
