name:                 seattlehaskell-org
version:              0.0.0
synopsis:             Dynamic content for seattlehaskell.org
description:          Please see README.md
homepage:             https://github.com/seahug/seattlehaskell-org
license:              MIT
license-file:         LICENSE
author:               Richard Cook
maintainer:           rcook@rcook.org
copyright:            2016 Richard Cook
category:             Web
build-type:           Simple
cabal-version:        >= 1.10

source-repository head
  type:               git
  location:           https://github.com/seahug/seattlehaskell-org.git

flag dev
  description:        Turn on development settings, like auto-reload templates.
  default:            False

flag library-only
  description:        Build for use with "yesod devel"
  default:            False

library
  default-language:   Haskell2010

  hs-source-dirs:     .
                      app

  if flag(dev) || flag(library-only)
    cpp-options:      -DDEVELOPMENT
    ghc-options:      -Wall -fwarn-tabs -O0
  else
    ghc-options:      -Wall -fwarn-tabs -O2

  default-extensions: CPP
                      DeriveDataTypeable
                      EmptyDataDecls
                      FlexibleContexts
                      FlexibleInstances
                      GADTs
                      GeneralizedNewtypeDeriving
                      MultiParamTypeClasses
                      NoImplicitPrelude
                      NoMonomorphismRestriction
                      OverloadedStrings
                      QuasiQuotes
                      RecordWildCards
                      ViewPatterns
                      TemplateHaskell
                      TupleSections
                      TypeFamilies

  build-depends:      MissingH
                    , aeson                         >= 0.6        && < 0.10
                    , base                          >= 4          && < 5
                    , bytestring                    >= 0.9        && < 0.11
                    , classy-prelude                >= 0.10.2
                    , classy-prelude-conduit        >= 0.10.2
                    , classy-prelude-yesod          >= 0.10.2
                    , conduit                       >= 1.0        && < 2.0
                    , containers
                    , data-default
                    , directory                     >= 1.1        && < 1.3
                    , either
                    , fast-logger                   >= 2.2        && < 2.5
                    , file-embed
                    , hjsmin                        >= 0.1        && < 0.2
                    , http-conduit                  >= 2.1        && < 2.2
                    , yesod                         >= 1.4.1      && < 1.5
                    , yesod-auth                    >= 1.4.0      && < 1.5
                    , yesod-core                    >= 1.4.6      && < 1.5
                    , yesod-form                    >= 1.4.0      && < 1.5
                    , yesod-static                  >= 1.4.0.3    && < 1.6
                    , monad-control                 >= 0.3        && < 1.1
                    , monad-logger                  >= 0.3        && < 0.4
                    , old-locale
                    , persistent                    >= 2.0        && < 2.3
                    , persistent-sqlite             >= 2.1.1      && < 2.3
                    , persistent-template           >= 2.0        && < 2.3
                    , safe
                    , shakespeare                   >= 2.0        && < 2.1
                    , template-haskell
                    , text                          >= 0.11       && < 2.0
                    , text-format
                    , transformers
                    , time
                    , unordered-containers
                    , vector
                    , wai-extra                     >= 3.0        && < 3.1
                    , wai-logger                    >= 2.2        && < 2.3
                    , warp                          >= 3.0        && < 3.2
                    , yaml                          >= 0.8        && < 0.9

  exposed-modules:    Application
                      Foundation
                      Handler.Common
                      Handler.Home
                      Import
                      Import.NoFoundation
                      Model
                      Settings
                      Settings.StaticFiles
                      Util.Formatting
                      Util.Meetup

executable seattlehaskell-org
  if flag(library-only)
    buildable:        False

  default-language:   Haskell2010

  hs-source-dirs:     app
  main-is:            main.hs

  ghc-options:        -threaded -O2 -rtsopts -with-rtsopts=-N

  build-depends:      base
                    , seattlehaskell-org

test-suite test
  type:               exitcode-stdio-1.0
  default-language:   Haskell2010

  hs-source-dirs:     test
  main-is:            Spec.hs

  ghc-options:        -Wall

  default-extensions: CPP
                      DeriveDataTypeable
                      EmptyDataDecls
                      FlexibleContexts
                      FlexibleInstances
                      GADTs
                      GeneralizedNewtypeDeriving
                      OverloadedStrings
                      QuasiQuotes
                      MultiParamTypeClasses
                      NoImplicitPrelude
                      NoMonomorphismRestriction
                      TemplateHaskell
                      TupleSections
                      TypeFamilies
                      ViewPatterns

  build-depends:      base
                    , bytestring
                    , classy-prelude
                    , classy-prelude-yesod
                    , hspec >= 2.0.0
                    , http-types
                    , monad-logger
                    , persistent
                    , persistent-sqlite
                    , resourcet
                    , seattlehaskell-org
                    , shakespeare
                    , stm
                    , text
                    , wai
                    , warp
                    , yesod
                    , yesod-core
                    , yesod-test >= 1.4.3 && < 1.5

  other-modules:      Handler.CommonSpec
                    , Handler.HomeSpec
                    , TestImport
